welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: type mismatch;
 found   : Unit
 required: Boolean
		if (estFaceMur()) {
                ^SnakeBuggle:11: error: type mismatch;
 found   : Unit
 required: Boolean
		if (estFaceMur()) {
                ^